--- a/apps/demo/src/app/others/docs-example/docs-example.scss
+++ b/apps/demo/src/app/others/docs-example/docs-example.scss
@@ -28,7 +28,7 @@
     }
   }
   > .ngx-docs-example-source {
-    .mat-mdc-tab-body {
+    .mat-tab-body {
       display: block;
       width: 100%;
       padding: 0;
