--- a/apps/demo/src/app/others/message-box/message-box.component.scss
+++ b/apps/demo/src/app/others/message-box/message-box.component.scss
@@ -1,10 +1,10 @@
 .message-box {
   &.info-modal {
-    .mat-mdc-dialog-title {
+    .mat-dialog-title {
     }
   }
   &.error-modal {
-    .mat-mdc-dialog-title {
+    .mat-dialog-title {
       color: red;
     }
   }
